# LLM-zoomcamp-04-evaluation

./: .env.example  01-data-gen.ipynb  02-search-eval.ipynb  README.md  evaluation_utils.py  main.py  pyproject.toml
data/: ground_truth-new.csv
